# car_simulation

./: ImuOdm.m  data_fusion_carsimulation.slx  datafusion_realdata.slx  datafusion_realdata.slx.autosave  datafusion_realdata.slxc  ellipsoid_calibration.mlx  func_lms_calibrate.m  get_ofs_read.slx  get_ofs_read.slxc  imu_odm.mlx  odm_wheel.slx  readdata.mlx  realdata_read_callback.asv  realdata_read_callback.m  untitled1.slx  untitled1.slxc  xy_plot.m
GazeboPlugin/: CMakeLists.txt
GazeboPlugin/msgsproto/: CMakeLists.txt  image_mat.pb.cc  image_mat.pb.h  imu_mat.pb.cc  imu_mat.pb.h  mw.internal.robotics.gazebotransport.CoSimMsgs.pb.cc  mw.internal.robotics.gazebotransport.CoSimMsgs.pb.h  mw.internal.robotics.gazebotransport.CoSimMsgs.proto  quaternion_mat.pb.cc  quaternion_mat.pb.h  time_mat.pb.cc  time_mat.pb.h  vector3d_mat.pb.cc  vector3d_mat.pb.h
GazeboPlugin/world/: customHandlerPluginTest.world  diffcar.world  differentialDriveRobot.world  differentialDriveRobot2.world  differentialDriveRobot3.world  differentialDriveRobot4.world  differentialDriveRobot5.world  multiSensorPluginTest.world
datafusion_realdata_grt_rtw/: build_exception.mat
slprj/_jitprj/: jitEngineAccessInfo.mat  s09xu52GstOmPy8G4Cxe8RG.l  s09xu52GstOmPy8G4Cxe8RG.mat  s0ytuPltvrdZIvkKTP21kOH.l  s0ytuPltvrdZIvkKTP21kOH.mat  s156FPqm3OuNF0mIGNYRtLH.l  s156FPqm3OuNF0mIGNYRtLH.mat  s15XZ2N9kQstRFUfD0K7uTG.l  s15XZ2N9kQstRFUfD0K7uTG.mat  s2VBgwJejHP9YE5xbGo9xME.l  s2VBgwJejHP9YE5xbGo9xME.mat  s351Jb2i3HbZzuXA26NmsFD.l  s351Jb2i3HbZzuXA26NmsFD.mat  s37VeKM1RHw65EUYZdC6MJ.l  s37VeKM1RHw65EUYZdC6MJ.mat  (+189 more)
(+348 files in other folders)
